--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-CA">
+<head>
+<meta charset="UTF-8">
+<style>
+body {
+  background-color: lightpink;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
 <body>
-    
-  
+
+<h1>Pannas Fashion Boutique</h1>
+<p>This is a paragraph.</p>
+
 </body>
 </html>
