--- a/index.html
+++ b/index.html
@@ -17,12 +17,35 @@ p {
   font-family: verdana;
   font-size: 20px;
 }
+
+  ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  }
+  
+  li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  }
+   
+  li a:hover:not(.active) {
+  background-color: #111;
+  }
+  
+  .active {AA
+    background-color: #04A;
+  }
+  
 </style>
 </head>
 <body>
 
 <h1>Pannas Fashion Boutique</h1>
-<p>This is a paragraph.</p>
 
 </body>
 </html>
