--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@ p {
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  border: 3px solid black;
+  }
+  
+  li { 
+  float: left;
   }
   
   li a {
@@ -37,14 +42,22 @@ p {
   background-color: #111;
   }
   
-  .active {AA
-    background-color: #04A;
+  .active {
+    background-color: #04AA6D;
   }
   
 </style>
 </head>
 <body>
+<!-- Nav Bar -->
 
+<ul>
+<li><a href="#home">Home</a></li>
+<li><a href="#collection">collection</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#checkout">Checkout</a></li>
+  </ul>
+  
 <h1>Pannas Fashion Boutique</h1>
 
 </body>
