--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <style>
 body {
-  background-color: lightpink;
+  background-color: #ffd8d4;
 }
 
 h1 {
@@ -23,12 +23,12 @@ p {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
-  border: 3px solid black;
+  background-color: #ffb5bb;
+
   }
   
   li { 
-  float: left;
+  float: right;
   }
   
   li a {
@@ -39,7 +39,7 @@ p {
   }
    
   li a:hover:not(.active) {
-  background-color: #111;
+  background-color: pink;
   }
   
   .active {
@@ -49,6 +49,7 @@ p {
 </style>
 </head>
 <body>
+  
 <!-- Nav Bar -->
 
 <ul>
