--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <title>Pannas Fashion Boutique </title>
 <meta charset="UTF-8">
 <style>
+  
 body {
-  background-color: #ffd8d4;
+background-color: #ffd8d4;
 }
 
 h1 {
@@ -15,7 +16,7 @@ h1 {
 
 p {
   font-family: verdana;
-  font-size: 20px;
+  font-size: 35px;
 }
 
   ul {
@@ -35,7 +36,7 @@ p {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 20px;
   }
    
   li a:hover:not(.active) {
@@ -54,12 +55,12 @@ p {
 
 <ul>
 <li><a href="#home">Home</a></li>
-<li><a href="#collection">collection</a></li>
+<li><a href="#collection">Collection</a></li>
 <li><a href="#about">About</a></li>
 <li><a href="#checkout">Checkout</a></li>
   </ul>
   
-<h1>Pannas Fashion Boutique</h1>
+<h1>Pannas Fashion <br> Boutique</h1>
 
 </body>
 </html>
