--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@ p {
   
 <h1>Pannas Fashion <br> Boutique</h1>
 
+  <!-- Image -->
+  <img src="Homepage bottom.jpg" alt="Fashion">  
+
 </body>
 </html>
