--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@ p {
     background-color: #04AA6D;
   }
   
+  .footer-image {
+  display: block;
+    margin: 20px auto;
+    max-width: 100%;
+    height: auto;
+  }
+  
 </style>
 </head>
 <body>
@@ -63,7 +70,7 @@ p {
 <h1>Pannas Fashion <br> Boutique</h1>
 
   <!-- Image -->
-  <img src="Homepage bottom.jpg" alt="Fashion">  
+  <img src="Homepage bottom.jpg" alt="Fashion" class="footer-image">  
 
 </body>
 </html>
