--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   
 body {
 background-color: #ffd8d4;
+background-image: url('homepage top.jpg');
+background-repeat: no-repeat;
 }
 
 h1 {
@@ -48,13 +50,6 @@ p {
     background-color: #04AA6D;
   }
   
-  .footer-image {
-  display: block;
-    margin: 20px auto;
-    max-width: 100%;
-    height: auto;
-  }
-  
 </style>
 </head>
 <body>
@@ -70,8 +65,6 @@ p {
   
 <h1>Pannas Fashion <br> Boutique</h1>
 
-  <!-- Image -->
-  <img src="Homepage bottom.jpg" alt="Fashion" class="footer-image">  
 
 </body>
 </html>
