--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ body {
 background-color: #ffd8d4;
 background-image: url('homepage top.jpg');
 background-repeat: no-repeat;
+display: flex;
+margin: 0;
+padding-top: 50px 
 }
 
 h1 {
@@ -27,6 +30,10 @@ p {
   padding: 0;
   overflow: hidden;
   background-color: #ffb5bb;
+  display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%
 
   }
   
@@ -39,7 +46,7 @@ p {
   color: white;
   text-align: center;
   padding: 20px 20px;
-  text-decoration: none
+  text-decoration: none; 
   }
    
   li a:hover:not(.active) {
