--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@ background-image: url('homepage top.jpg');
 background-repeat: no-repeat;
 display: flex;
 margin: 0;
-padding-top: 50px 
+padding-top: 50px;  
+
 }
 
 h1 {
   color: white;
   text-align: center;
+  margin-left: 220px; 
 }
 
 p {
@@ -33,7 +35,7 @@ p {
   display: flex;
   position: fixed;
   top: 0;
-  width: 100%
+  width: 100%;
 
   }
   
