text to the right

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ p {
   overflow: hidden;
   background-color: #ffb5bb;
   display: flex;
+  justify-content: flex-end; 
   position: fixed;
   top: 0;
   width: 100%;
