--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
   
 body {
 background-color: #ffd8d4;
+margin: 0;
+padding-top: 50px; 
+}
+  
+  .header {
 background-image: url('homepage top.jpg');
 background-repeat: no-repeat;
-display: flex;
-margin: 0;
-padding-top: 50px;  
-
-}
+background-size: cover; 
+height: 400px;
+width: 100%;
+  }
 
 h1 {
   color: white;
   text-align: center;
-  margin-left: 220px; 
-}
-
-p {
-  font-family: verdana;
-  font-size: 60px;
+  margin: 0px; 
+  padding-top: 150px;
 }
 
   ul {
@@ -41,7 +41,7 @@ p {
   }
   
   li { 
-  float: right;
+  margin-left: 20px
   }
   
   li a {
