--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ width: 100%;
 h1 {
   color: white;
   text-align: center;
-  margin: 0px; 
+  margin: 0; 
   padding-top: 150px;
 }
 
@@ -73,8 +73,9 @@ h1 {
 <li><a href="#checkout">Checkout</a></li>
   </ul>
   
+<div class="header">
 <h1>Pannas Fashion <br> Boutique</h1>
-
+</div>
 
 </body>
 </html>
