--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@ background-size: cover;
 height: 300px;
 width: 100%;
   }
+  
+  .home-link {
+  color: brown;
+  font-weight: bold;
+  }
 
 h1 {
   color: white;
@@ -67,7 +72,7 @@ h1 {
 <!-- Nav Bar -->
 
 <ul>
-<li><a href="#home">Home</a></li>
+<li><a class="home-link" href="#home">Home</a></li>
 <li><a href="#collection">Collection</a></li>
 <li><a href="#about">About</a></li>
 <li><a href="#checkout">Checkout</a></li>
