--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ h1 {
   color: white;
   text-align: center;
   margin: 0; 
-  padding-top: 100px;
+  padding-top: 90px;
+  font-size: 40;
 }
 
   ul {
