--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ padding-top: 45px;
 background-image: url('homepage top.jpg');
 background-repeat: no-repeat;
 background-size: cover; 
-height: 250px;
+height: 400px;
 width: 100%;
   }
   
@@ -31,6 +31,10 @@ h1 {
   padding-top: 90px;
   font-size: 40;
 }
+
+  h2 { 
+    color: #b46d52;
+  }
 
   ul {
   list-style-type: none;
@@ -82,6 +86,8 @@ h1 {
 <div class="header">
 <h1>Pannas Fashion <br> Boutique</h1>
 </div>
+  
+<h2>What We Offer </h2>
 
 </body>
 </html>
