--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {
 background-color: #ffd8d4;
 margin: 0;
 padding-top: 45px; 
+
 }
   
   .header {
@@ -34,6 +35,7 @@ h1 {
 
   h2 { 
     color: #b46d52;
+    font-family: "Georgina", serif;
   }
 
   ul {
