--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-CA">
 <head>
 <title>Pannas Fashion Boutique </title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 <meta charset="UTF-8">
 <style>
   
@@ -9,6 +10,7 @@ body {
 background-color: #ffd8d4;
 margin: 0;
 padding-top: 45px; 
+font-family: "Sofia", sans-serif;
 
 }
   
@@ -35,7 +37,7 @@ h1 {
 
   h2 { 
     color: #b46d52;
-    font-family: "Georgina", serif;
+    font-family: "jua";
   }
 
   ul {
