--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@ h1 {
   text-align: center;
   margin: 0; 
   padding-top: 90px;
-  font-size: 40;
+  font-size: 50;
 }
 
   h2 { 
     color: #b46d52;
-    font-family: "jua";
+    font-family: "";
   }
 
   ul {
