--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-CA">
 <head>
 <title>Pannas Fashion Boutique </title>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Playfair Display">
 <meta charset="UTF-8">
 <style>
   
@@ -37,7 +37,7 @@ h1 {
 
   h2 { 
     color: #b46d52;
-    font-family: "";
+    font-family: "Playfair Display";
   }
 
   ul {
