--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@ h1 {
     background-color: #04AA6D;
   }
   
+  .sqaures-container {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+    gap: 20px;
+  }
+  
+  .sqaures {
+  width: 150px;
+  height: 150px;
+  background-color: white;
+  box-shadow: grey;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Playfair Display", serif;
+  font-size: 18px;
+  color: #b46d52;
+  text-align: center;
+  }
+  
 </style>
 </head>
 <body>
@@ -92,6 +114,13 @@ h1 {
 </div>
   
 <h2>What We Offer </h2>
+  
+<!-- Sqaures-->
+<div class="sqaures-container">
+<div class="sqaure">Square 1</div>
+<div class="sqaure">Square 2</div>
+<div class="sqaure">Square 3</div>
+  </div>
 
 </body>
 </html>
