--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ background-color: #ffd8d4;
 margin: 0;
 padding-top: 45px; 
 font-family: "Sofia", sans-serif;
-
 }
   
   .header {
@@ -74,26 +73,22 @@ h1 {
     background-color: #04AA6D;
   }
   
-  .sqaures-container {
+  .squares-container {
     display: flex;
     justify-content: center;
     margin: 50px auto;
     gap: 20px;
   }
   
-  .sqaures {
-  width: 150px;
-  height: 150px;
+  .square {
+  width: 350px;
+  height: 350px;
   background-color: white;
   box-shadow: grey;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Playfair Display", serif;
-  font-size: 18px;
-  color: #b46d52;
-  text-align: center;
   }
   
 </style>
@@ -116,10 +111,10 @@ h1 {
 <h2>What We Offer </h2>
   
 <!-- Sqaures-->
-<div class="sqaures-container">
-<div class="sqaure">Square 1</div>
-<div class="sqaure">Square 2</div>
-<div class="sqaure">Square 3</div>
+<div class="squares-container">
+<div class="square">Square 1</div>
+<div class="square">Square 2</div>
+<div class="square">Square 3</div>
   </div>
 
 </body>
