--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Playfair Display", serif;
+  font-size: 18px;
+  color: #b46d52;
+  text-align: center;
   }
   
 </style>
@@ -112,9 +116,10 @@ h1 {
   
 <!-- Sqaures-->
 <div class="squares-container">
-<div class="square">Square 1</div>
-<div class="square">Square 2</div>
-<div class="square">Square 3</div>
+<div class="square">Traditional Clothes</div>
+<div class="square">Jewelry</div>
+<div class="square">Hair Pieces</div>
+<div class="square">Other Collection</div>
   </div>
 
 </body>
