--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@ h1 {
   text-align: center;
   }
   
+  .square img {
+    width: 70px;
+    height: 70px;
+    border-radius: 10px
+  }
+  
 </style>
 </head>
 <body>
@@ -115,10 +121,17 @@ h1 {
   
 <!-- Sqaures-->
 <div class="squares-container">
-<div class="square">Traditional Clothes</div>
-<div class="square">Jewelry</div>
-<div class="square">Hair Pieces</div>
-<div class="square">Other Collection</div>
+<div class="square">
+  <img src="Traditional.jpg" alt="Traditional Clothes">Traditional Clothes</div>
+  
+<div class="square">
+    <img src="Jewelry.jpg" alt="Jewelry">Jewelry</div>
+  
+<div class="square">
+  <img src="Hair.jpg" alt="Hair Pieces">Hair Pieces</div>
+  
+<div class="square">
+   <img src="Other.jpg" alt="Other Collections">Other Collections</div>
   </div>
 
 </body>
