--- a/index.html
+++ b/index.html
@@ -92,12 +92,15 @@ h1 {
   font-size: 18px;
   color: #b46d52;
   text-align: center;
+  overflow: hidden;
   }
   
   .square img {
-    width: 70px;
-    height: 70px;
-    border-radius: 10px
+    width: 100px;
+    height: 100px;
+    border-radius: 20px;
+    padding-top: 50px;
+    margin-left: 20px
   }
   
 </style>
