--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@ h1 {
   text-align: center;
   margin: 0; 
   padding-top: 90px;
-  font-size: 50;
+  font-size: 80px;
 }
 
   h2 { 
     color: #b46d52;
     font-family: "Playfair Display";
+    text-align: center;
+    font-size: 30px;
   }
 
   ul {
@@ -82,12 +84,13 @@ h1 {
   
   .square {
   width: 350px;
-  height: 350px;
+  height: 450px;
   background-color: white;
   box-shadow: grey;
   border-radius: 10px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   font-family: "Playfair Display", serif;
   font-size: 18px;
   color: #b46d52;
@@ -96,13 +99,12 @@ h1 {
   }
   
   .square img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border-radius: 20px;
-    padding-top: 50px;
-    margin-left: 20px
+    margin-top: 20px
   }
-  
+   
 </style>
 </head>
 <body>
@@ -128,7 +130,7 @@ h1 {
   <img src="Traditional.jpg" alt="Traditional Clothes">Traditional Clothes</div>
   
 <div class="square">
-    <img src="Jewelry.jpg" alt="Jewelry">Jewelry</div>
+    <img src="Jewelry .jpg" alt="Jewelry">Jewelry</div>
   
 <div class="square">
   <img src="Hair.jpg" alt="Hair Pieces">Hair Pieces</div>
