--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@ h1 {
     border-radius: 20px;
     margin-top: 20px
   }
+  
+  .footer img {
+ background-image: url('Homepage bottom.jpg');
+background-repeat: no-repeat;
+background-size: cover; 
+height: 400px;
+width: 100%;
+  }
    
 </style>
 </head>
@@ -137,6 +145,10 @@ h1 {
   
 <div class="square">
    <img src="Other.jpg" alt="Other Collections">Other Collections</div>
+  </div>
+  
+<div class="footer">
+  <img src="Homepage bottom.jpg" alt="footer"> 
   </div>
 
 </body>
