--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ font-family: "Sofia", sans-serif;
 background-image: url('homepage top.jpg');
 background-repeat: no-repeat;
 background-size: cover; 
-height: 400px;
+height: auto;
 width: 100%;
   }
   
@@ -65,6 +65,7 @@ h1 {
   text-align: center;
   padding: 20px 20px;
   text-decoration: none; 
+  font-size: 20px
   }
    
   li a:hover:not(.active) {
@@ -109,7 +110,7 @@ h1 {
  background-image: url('Homepage bottom.jpg');
 background-repeat: no-repeat;
 background-size: cover; 
-height: 400px;
+height: auto;
 width: 100%;
   }
    
