--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ h1 {
   .square {
   width: 350px;
   height: 450px;
-  background-color: white;
+  background-color: #F7CAC9;
   box-shadow: grey;
   border-radius: 10px;
   display: flex;
@@ -110,7 +110,7 @@ h1 {
  background-image: url('Homepage bottom.jpg');
 background-repeat: no-repeat;
 background-size: cover; 
-height: auto;
+height: 250;
 width: 100%;
   }
    
