--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
   
 body {
-background-color: #ffd8d4;
+background-color: #ffe5ec;
 margin: 0;
 padding-top: 45px; 
 font-family: "Sofia", sans-serif;
