--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ h1 {
  background-image: url('Homepage bottom.jpg');
 background-repeat: no-repeat;
 background-size: cover; 
-height: 200;
+height: 150px;
 width: 100%;
   }
    
