--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ h1 {
 <ul>
 <li><a class="home-link" href="#home">Home</a></li>
 <li><a href="#collection">Collection</a></li>
-<li><a href="#about">About</a></li>
+<li><a href="https://vrunda702.github.io/Personal-Website-About/">About</a></li>
 <li><a href="#checkout">Checkout</a></li>
   </ul>
   
