--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ h1 {
 <!-- Nav Bar -->
 
 <ul>
-<li><a class="home-link" href="#home">Home</a></li>
+<li><a class="home-link" href="https://vrunda702.github.io/Personal-Website-Homepage/">Home</a></li>
 <li><a href="#collection">Collection</a></li>
 <li><a href="https://vrunda702.github.io/Personal-Website-About/">About</a></li>
 <li><a href="#checkout">Checkout</a></li>
