--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ h1 {
 <!-- Nav Bar -->
 
 <ul>
-<li><a class="home-link" href="https://vrunda702.github.io/Personal-Website-Homepage/">Home</a></li>
-<li><a href="#collection">Collection</a></li>
+<li><a href="https://vrunda702.github.io/Personal-Website-Homepage/">Home</a></li>
+<li><a class="collection-link" href="#https://vrunda702.github.io/Personal-Website-Collection/">Collection</a></li>
 <li><a href="https://vrunda702.github.io/Personal-Website-About/">About</a></li>
 <li><a href="#checkout">Checkout</a></li>
   </ul>
