--- a/index.html
+++ b/index.html
@@ -113,9 +113,12 @@ h1 {
 <!-- Nav Bar -->
 
 <ul>
-<li><a href="https://vrunda702.github.io/Personal-Website-Homepage/">Home</a></li>
+<li><a class="home-link" href="https://vrunda702.github.io/Personal-Website-Homepage/">Home</a></li>
+  
 <li><a class="collection-link" href="#https://vrunda702.github.io/Personal-Website-Collection/">Collection</a></li>
+  
 <li><a href="https://vrunda702.github.io/Personal-Website-About/">About</a></li>
+  
 <li><a href="#checkout">Checkout</a></li>
   </ul>
   
