--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ h1 {
 <ul>
 <li><a class="home-link" href="https://vrunda702.github.io/Personal-Website-Homepage/">Home</a></li>
   
-<li><a class="collection-link" href="#https://vrunda702.github.io/Personal-Website-Collection/">Collection</a></li>
+<li><a class="collection-link" href="https://vrunda702.github.io/Personal-Website-Collection/">Collection</a></li>
   
 <li><a href="https://vrunda702.github.io/Personal-Website-About/">About</a></li>
   
