--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ h1 {
   
 <li><a href="https://vrunda702.github.io/Personal-Website-About/">About</a></li>
   
-<li><a href="#checkout">Checkout</a></li>
+<li><a href="#contact">Contact Us</a></li>
   </ul>
   
 <div class="header">
