--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!--References-->
+<!-- w3schools 
+body {
+  background-image: url('example_img_girl.jpg');
+  background-repeat: no-repeat;
+}
+-->
+
+
+
 <!DOCTYPE html>
 <html lang="en-CA">
 <head>
