--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!--References-->
-<!-- w3schools 
+<!-- Code copied from: [https://www.w3schools.com/html/html_images_background.asp]
+Author: [w3schools]
+Name: [HTML background images]
+Description: [To place images in the header]
+Date retrieved: [December 4th]
 body {
   background-image: url('example_img_girl.jpg');
   background-repeat: no-repeat;
