--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@ body {
   background-image: url('example_img_girl.jpg');
   background-repeat: no-repeat;
 }
+
+[https://www.w3schools.com/css/css_font_google.asp]
+Author: [w3schools]
+Name: [CSS Google Fonts]
+Description: [To use fonts from Google]
+Date retrieved: [December 4th]
+<head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+<style>
+body {
+font-family: "Sofia", sans-serif;
+}
+</style>
+</head>
+
 -->
 
 
