--- a/index.html
+++ b/index.html
@@ -23,22 +23,19 @@ font-family: "Sofia", sans-serif;
 </style>
 </head>
 
-Author: [Professor ]
-Name: [Exercise 6]
+Author: [Vrunda Popawala]
+Name: [Exercise 6: Navgation]
 Description: [To create a nav bar
 Date retrieved: [December 6th]
 
-   <ul>  
-  <li><a href="/">HOME</a></li>
-  <li><a href="/">CLASSES</a></li>
-  <li><a href="/">CATERING</a></li>
-  <li><a href="/">ABOUT</a></li>
+<ul>  
+<li><a href="/">HOME</a></li>
+<li><a href="/">CLASSES</a></li>
+<li><a href="/">CATERING</a></li>
+<li><a href="/">ABOUT</a></li>
 </ul>       
           
-
-
 -->
-
 
 
 <!DOCTYPE html>
