--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@ font-family: "Sofia", sans-serif;
 
 Author: [Vrunda Popawala]
 Name: [Exercise 6: Navgation]
-Description: [To create a nav bar
+Description: [To create a nav bar]
 Date retrieved: [December 6th]
-
 <ul>  
 <li><a href="/">HOME</a></li>
 <li><a href="/">CLASSES</a></li>
