--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ Date retrieved: [December 6th]
 <li><a href="/">CATERING</a></li>
 <li><a href="/">ABOUT</a></li>
 </ul>       
-          
+
+Website created by Vrunda Popawala
 -->
 
 
